feat: styles & enhancement

--- a/src/components/global/Button/Button.astro
+++ b/src/components/global/Button/Button.astro
@@ -9,7 +9,7 @@ const { text = '', ...rest }: Props = Astro.props
 
 <button
   type='button'
-  class='rounded-lg bg-gradient-to-r from-cyan-500 to-blue-500 px-2 py-1 text-center text-sm font-bold text-white hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800'
+  class='rounded-lg bg-gradient-to-r from-cyan-500 to-blue-500 px-3 py-0.5 text-center font-iceland text-base font-bold uppercase text-white hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800'
   {...rest}
 >
   {text}
