--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import { Layout, Timer, Button } from '@globals'
 
 <Layout title='Parrot'>
   <main
-    class='mx-2 flex h-[100dvh] w-[100dvw] flex-col items-center justify-center px-10 py-12 text-center text-lg font-semibold text-pink-100'
+    class='flex h-[100dvh] w-screen flex-col items-center justify-center px-10 py-12 text-center text-lg font-semibold text-pink-100'
   >
     <section>
-      <h1 class='m-2 text-6xl text-green-300' id='title'>PARROT</h1>
+      <h1 class='m-2 font-bungee text-5xl text-green-400'>PARROT</h1>
     </section>
     <Timer timestamp={1710086931566} />
     <Button text='reset' id='reset-time' />
