--- a/src/components/global/Button/Button.astro
+++ b/src/components/global/Button/Button.astro
@@ -9,7 +9,7 @@ const { text = '', ...rest }: Props = Astro.props
 
 <button
   type='button'
-  class='rounded-lg bg-gradient-to-r from-cyan-500 to-blue-500 px-3 py-0.5 text-center font-iceland text-base font-bold uppercase text-white hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800'
+  class='font-iceland rounded-lg border-2 border-emerald-900 bg-gradient-to-r from-emerald-500 to-emerald-500 px-3 py-0.5 text-center text-base font-bold uppercase text-white shadow hover:border-red-800 hover:bg-gradient-to-bl hover:from-red-500 focus:outline-none focus:ring-4 focus:ring-emerald-300 dark:focus:ring-emerald-800'
   {...rest}
 >
   {text}
