--- a/src/components/global/Layout/Layout.astro
+++ b/src/components/global/Layout/Layout.astro
@@ -1,15 +1,9 @@
 ---
-// Component imports
-import { SEO, TwitterCardType } from 'astro-seo'
-
 // Style imports
 import '@style/tailwind.css'
 
-// Helper imports
-import { seoConfig } from '@util/seoConfig'
-
 // Props
-export interface Props {
+interface Props {
   /** Title of the page. */
   title: string
 
@@ -30,211 +24,22 @@ export interface Props {
 }
 
 // Background image
-import { Background } from '@component/global'
+import { Background, Header, Scripts } from '@component/global'
 
 // Font imports
-import '@fontsource/source-sans-pro'
-import '@fontsource/bungee-shade'
-import '@fontsource/iceland'
-import '@fontsource/bungee'
-
-const {
-  title,
-  ogTitle,
-  description,
-  image,
-  disableIndexing = false
-} = Astro.props as Props
+import '@fontsource/averia-serif-libre'
 ---
 
 <html lang='en'>
-  <head>
-    <!-- SEO. -->
-    <SEO
-      title={title}
-      description={seoConfig.description || description}
-      noindex={disableIndexing}
-      nofollow={disableIndexing}
-      openGraph={{
-        basic: {
-          title: ogTitle || title,
-          type: 'website',
-          image: seoConfig.image.url || image.url
-        },
-        image: {
-          width: seoConfig.image.width,
-          height: seoConfig.image.height,
-          alt: seoConfig.image.alt || image.alt
-        },
-        optional: {
-          siteName: seoConfig.siteName,
-          description: seoConfig.description || description
-        }
-      }}
-      twitter={{
-        card: seoConfig.twitter.card as TwitterCardType
-      }}
-    />
-
-    <!-- Global meta tags. -->
-    <meta charset='utf-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
-
-    <!-- Favicons. -->
-    <!-- 16 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='16x16'
-      href='/favicons/favicon-16x16.png'
-    />
-    <!-- 20 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='20x20'
-      href='/favicons/favicon-20x20.png'
-    />
-    <!-- 24 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='24x24'
-      href='/favicons/favicon-24x24.png'
-    />
-    <!-- 48 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='48x48'
-      href='/favicons/favicon-48x48.png'
-    />
-    <!-- 64 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='64x64'
-      href='/favicons/favicon-64x64.png'
-    />
-    <!-- 128 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='128x128'
-      href='/favicons/favicon-128x128.png'
-    />
-    <!-- 144 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='144x144'
-      href='/favicons/favicon-144x144.png'
-    />
-    <!-- 256 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='256x256'
-      href='/favicons/favicon-256x256.png'
-    />
-    <!-- 512 -->
-    <link
-      rel='icon'
-      type='image/png'
-      sizes='512x512'
-      href='/favicons/favicon-512x512.png'
-    />
-    <link
-      rel='shortcut icon'
-      type='image/x-icon'
-      href='/favicons/favicon.ico'
-    />
-    <link rel='icon' type='image/x-icon' href='/favicons/favicon.ico' />
-    <meta name='msapplication-TileColor' content='#A5DD9B' />
-    <meta
-      name='msapplication-TileImage'
-      content='/favicons/favicon-144x144.png'
-    />
-    <meta name='msapplication-config' content='/browserconfig.xml' />
-    <link rel='icon' type='image/svg+xml' href='/favicons/favicon.svg' />
-    <meta name='theme-color' content='#A5DD9B' />
-
-    <!-- Service worker registration. -->
-    {
-      !import.meta.env.DEV && (
-        <>
-          <script is:inline src='/registerSW.js' />
-          <link rel='manifest' href='/manifest.webmanifest' />
-        </>
-      )
-    }
-    <style is:global>
-      /* Global styles here */
-      *,
-      *::before,
-      *::after {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: inherit;
-      }
-
-      body {
-        font-family: 'Source Sans Pro', sans-serif;
-      }
-
-      #title {
-        font-family: 'Bungee Shade', system-ui;
-      }
-
-      @font-face {
-        font-family: 'Orloj';
-        font-display: swap;
-        src: url('/fonts/orloj/orloj.woff2') format('woff2');
-      }
-    </style>
-  </head>
+  <Header {...Astro.props} />
   <body
     data-dev={import.meta.env.DEV}
-    class='flex flex-col overflow-x-hidden data-[dev]:debug-screens'
+    class='flex flex-col overflow-x-hidden font-averia data-[dev]:debug-screens'
   >
     <Background />
     <div>
       <slot />
     </div>
-    <script>
-      const parrotCSS = {
-        color: 'pink'
-      }
-      console.log(`
-░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-░░░░░░░░░░░░░░▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░
-░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░▒▒▒▒░░░░░░░░░░░░░░░░░░░░
-░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░
-░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                ▒▒░░░░░░░░░░░░░░
-░░░░░░▒▒  ▒▒▒▒▒▒░░░░          ░░          ▒▒░░░░░░░░░░░░
-░░░░░░      ░░░░░░░░  ▒▒▒▒  ░░              ░░░░░░░░░░░░
-░░░░░░      ░░░░  ░░░░██▒▒▒▒░░                ░░▒▒░░░░▒▒
-░░░░░░░░      ░░░░  ░░░░░░  ░░              ▒▒░░░░░░▒▒░░
-░░░░░░██████      ░░░░░░░░░░                  ▒▒░░░░░░▒▒
-░░████████████                                  ░░░░░░░░
-░░██████████████                    ██          ▒▒░░░░░░
-██████████████░░                    ████          ░░░░░░
-██████████████░░  ▓▓▓▓              ████        ▒▒░░▒▒░░
-██████████████▓▓██████▓▓            ██▒▒        ▒▒░░░░▒▒
-██████████████████████████        ██▓▓▒▒        ░░░░░░░░
-██████████▓▓▓▓████████████      ██▓▓██▒▒      ▒▒▒▒░░░░░░
-░░████████▓▓██████████████░░▓▓██████▒▒    ░░░░░░░░▒▒░░░░
-░░████████░░██████████░░░░▓▓▓▓██████▒▒  ░░░░░░░░░░░░▒▒░░
-░░████████░░░░░░░░░░░░░░▓▓██████████    ░░░░▒▒░░░░▒▒▒▒▒▒
-░░░░██████░░░░░░░░░░░░░░░░▓▓██████▒▒  ░░░░░░░░▒▒░░░░▒▒▒▒
-░░░░░░██████░░░░░░░░░░░░░░░░██████▒▒  ░░░░░░░░▒▒▒▒▒▒▒▒▒▒
-░░░░░░░░██████░░░░░░░░░░░░░░░░▓▓██▒▒▒▒░░░░░░░░░░▒▒▒▒▒▒▒▒
-░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▓▓██▒▒░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒
-░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▓▓  ░░░░░░░░░░▒▒░░░░▒▒▒▒
-░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒░░▒▒▒▒░░░░░░▒▒▒▒▒▒
-      `)
-    </script>
+    <Scripts />
   </body>
 </html>
